--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "usehooks-ts": "^2.9.1",
     "viem": "^2.16.1",
     "wagmi": "^2.10.5"
   },
